# polka-pvm

./: .env.example  .gitignore  DEPLOY.md  README.md  package.json
build-new/: contracts_PVMLottery_sol_IRustVRF.abi  contracts_PVMLottery_sol_PVMLottery.abi
contracts/: PVMLottery.sol  SolidityVRF.sol
frontend/: index.html
rust-vrf/: Cargo.toml
rust-vrf/src/: main.rs
scripts/: deploy.js  deploy.sh
