[package]
name = "pvm-vrf"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.31" }
uapi = { package = "pallet-revive-uapi", version = "0.10", default-features = false }
